--- a/Frontend/src/Components/Home/style/Section1.css
+++ b/Frontend/src/Components/Home/style/Section1.css
@@ -11,7 +11,7 @@
   font-size: 60px
 }
 .txt2{
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 500;
   opacity: 0.7;
 }
@@ -89,6 +89,12 @@
     font-weight: bolder;
     font-size: 30px
   }
+  .txt2{
+    font-size: 15px;
+    font-weight: 500;
+    opacity: 0.7;
+  }
+  
   .btn1{
     width: 150px;
     height: 54px;
