--- a/Frontend/src/Components/Home/style/Section1.css
+++ b/Frontend/src/Components/Home/style/Section1.css
@@ -57,7 +57,7 @@
 .image1{
   height: 80vh;
   object-fit: cover;
-  width: 330px;
+  width: 350px;
 }
 .image2{
   height: 39vh;
@@ -75,12 +75,12 @@
   margin-top: 80px;
 }
 
-
-@media screen and (max-width: 700px) {
+/* =========MINI1 LAPTOP screen====== */
+@media screen and (max-width: 	2560px ) {
   .image1{
     height: 80vh;
     object-fit: cover;
-    width: 300px;
+    width: 330px;
   }
   .image2{
     height: 39vh;
@@ -94,12 +94,152 @@
     width: 350px;
     margin-top: 5px;
   }
-  .section1-text-section{
-    margin-top: 80px;
+  .section1-iamge-section{
+    margin-top: 50px;
+  }
+  }
+  @media screen and (max-width: 	2540px ) {
+    .image1{
+      height: 80vh;
+      object-fit: cover;
+      width: 330px;
+    }
+    .image2{
+      height: 39vh;
+      object-fit: cover;
+      width: 350px;
+      margin-bottom: 5px;
+    }
+    .image3{
+      height: 39vh;
+      object-fit: cover;
+      width: 350px;
+      margin-top: 5px;
+    }
+    .section1-iamge-section{
+      margin-top: 50px;
+    }
+    }
+    
+ 
+    @media screen and (max-width: 	1200px ) {
+      .image1{
+        height: 80vh;
+        object-fit: cover;
+        width: 200px;
+      }
+      .image2{
+        height: 39vh;
+        object-fit: cover;
+        width: 300px;
+        margin-bottom: 5px;
+      }
+      .image3{
+        height: 39vh;
+        object-fit: cover;
+        width: 300px;
+        margin-top: 5px;
+      }
+      .section1-iamge-section{
+        margin-top: 50px;
+      }
+      }
+
+@media screen and (max-width: 1280px ) {
+  .btn-container{
+    flex-direction: row;
+    margin-top: 15px;
+  }
+  .btn1{
+    width: 200px;
+    height: 54px;
+    background-color: #0480fc;
+    color:#ffffff;
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 5px;
+    box-shadow: 0 0 10px 0 #a2d0ff;
+    filter: drop-shadow(0 0 10px #A2D0FF);
+  }
+  .btn2{
+    width: 200px;
+    height: 54px;
+    background-color: #ffffff;
+    color:#0480fc;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 5px;
+    box-shadow: 2px 2px 2px 2px #ffffff;
+    border: none!important;
+      box-shadow: 0 0 24px 0 25% #9f9f9f;
+      filter: drop-shadow(0 0 24px rgba(159,159,159,.25));
+  }
+  .btn1:hover{
+    background-color: #0480fc!important;
+    color:#ffffff;
+  }
+  .btn2:hover{
+    background-color: #ffffff!important;
+    color:#0480fc;
+  }
+  .image1{
+    height: 80vh;
+    object-fit: cover;
+    width: 250px;
+  }
+  .image2{
+    height: 39vh;
+    object-fit: cover;
+    width: 200px;
+    margin-bottom: 5px;
+  }
+  .image3{
+    height: 39vh;
+    object-fit: cover;
+    width: 200px;
+    margin-top: 5px;
+  }
+  .section1-iamge-section{
+    margin-top: 50px;
+  }
+  .section1-body{
+    background-color:#f2f9ff ;
+    height: 2000px;
   }
 }
 
-@media screen and (max-width: 480px) {
+
+/* =========tablet screen====== */
+@media screen and (max-width: 768px) {
+  .image1{
+    height: 80vh;
+    object-fit: cover;
+    width: 300px;
+  }
+  .image2{
+    height: 39vh;
+    object-fit: cover;
+    width: 320px;
+    margin-bottom: 5px;
+  }
+  .image3{
+    height: 39vh;
+    object-fit: cover;
+    width: 320px;
+    margin-top: 5px;
+  }
+  .section1-iamge-section{
+    margin-top: 50px;
+  }
+  .section1-body{
+    background-color:#f2f9ff ;
+    height: 2000px;
+  }
+}
+
+
+/* =========mobile screen====== */
+@media screen and (max-width: 479px) {
   .section1-body{
     background-color:#f2f9ff ;
     height: 500px;
@@ -164,6 +304,10 @@
     object-fit: cover;
     width: 150px;
     margin-top: 5px;
+  }
+  .section1-body{
+    background-color:#f2f9ff ;
+    height: 1000px;
   }
   
 }
