--- a/Frontend/src/Components/Navigations/style/Header.css
+++ b/Frontend/src/Components/Navigations/style/Header.css
@@ -30,7 +30,7 @@
   background-color: #0480fc!important;
   color:#ffffff;
 }
-.btn1{
+.btn-get-started{
   width: 150px;
   height: 50px;
   background-color: #0480fc;
@@ -40,4 +40,12 @@
   margin-right: 5px;
   box-shadow: 0 0 10px 0 #a2d0ff;
   filter: drop-shadow(0 0 10px #A2D0FF);
+}
+
+
+
+@media screen and (max-width: 479px 375 768px) {
+  .mobile{
+    height: 100vh
+  }
 }
