--- a/Frontend/src/Components/Home/style/Section2.css
+++ b/Frontend/src/Components/Home/style/Section2.css
@@ -1,22 +1,22 @@
 .section2-body {
     padding-left: 50px;
     padding-right: 50px;
+   
 }
 .section2-container {
     display: flex;
-    margin-top: -50px;
-    margin-bottom: 50%x;
+    margin-top: -200px;
+    
 }
+
 .card-1-style {
-   
-    width: 30rem;
+    width: 100%;
     border: none;
     box-shadow: 0 0 24px 0 25% #9f9f9f;
     filter: drop-shadow(0 0 24px rgba(159, 159, 159, .25));
 }
 
-
-/* ====stag12====== */
+/* ====stag1====== */
 .what-we-offer-text {
     font-size: 20px;
     line-height: 26.4px;
@@ -32,13 +32,13 @@
     margin-top: 5%;
 }
 
-
 /* ====stage2====== */
 .stage2 {
     background-color: #008bd9;
     height: 150px;
     margin-top: -10px;
 }
+
 .stag2-text-1-bg {
     background-color: #09cf70;
     font-size: 15px;
@@ -82,112 +82,161 @@
     margin-right: 30px;
 }
 
-
 /* ====stage3====== */
 .stag3-text-1 {
-  font-weight: 800;
-  font-size: 19px;
-  color: #000000;
-  margin-top: 10%;
-  display: flex;
-  flex-direction: row-reverse;
+    font-weight: 800;
+    font-size: 19px;
+    color: #000000;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: row-reverse;
 }
 .stage3-text-container {
-  margin-top: 10%;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 30px;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 30px;
 }
 .stag3-text-2 {
-  font-size: 20px;
-  font-weight: 800;
-  color: #000000;
-  padding-right: 10px;
+    font-size: 20px;
+    font-weight: 800;
+    color: #000000;
+    padding-right: 10px;
 }
 .stag3-text-2-2 {
-  font-size: 20px;
-  color: #000000;
+    font-size: 20px;
+    color: #000000;
 }
 .stage3-text-3 {
-  color: #008bd9;
-  font-weight: 700;
-  font-size: 20px;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 30px;
+    color: #008bd9;
+    font-weight: 700;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 30px;
 }
 
+/* ================================================= */
+/* CARD 2 */
+/* ================================================= */
 
-/* =====2nd card===== */
+.card-2-style {
+    width: 100%;
+    border: none;
+    height: 300px;
+    margin-top: 47px;
+    box-shadow: 0 0 24px 0 25% #9f9f9f;
+    filter: drop-shadow(0 0 24px rgba(159, 159, 159, .25));
+}
 
+/* ====stag1====== */
+.Handling {
+    display: flex;
+    flex-direction: row-reverse;
+    font-weight: 800;
+    font-size: 16px;
+    margin-top: 5%;
+}
+.card-2-stage2 {
+    background-color: #008bd9;
+    height: 330px;
+    margin-top: -10px;
+}
 /* ====stage2====== */
 .card-2-stag2-text-1 {
-  font-weight: 800;
-  font-size: 15px;
-  color: #ffffff;
-  margin-top: 10%;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 30px;
+    font-weight: 800;
+    font-size: 15px;
+    color: #ffffff;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 30px;
 }
 .card-2-stage2-text-container {
-  margin-top: 10%;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 50px;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 50px;
 }
 .card-2-stag2-text-2 {
-  font-size: 20px;
-  font-weight: 800;
-  color: #ffffff;
-  padding-right: 10px;
+    font-size: 20px;
+    font-weight: 800;
+    color: #ffffff;
+    padding-right: 10px;
 }
 .card-2-stag2-text-2-2 {
-  font-size: 20px;
-  color: #ffffff;
-  
+    font-size: 20px;
+    color: #ffffff;
 }
 .card-2-stage2-text-3 {
-  color: #09cf70;
-  font-weight: 700;
-  font-size: 20px;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 50px;
+    color: #09cf70;
+    font-weight: 700;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 50px;
 }
 
 /* ====stage3====== */
 .card-2-stag3-text-1 {
-  font-weight: 800;
-  font-size: 15px;
-  color: #000000;
-  margin-top: 20%;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 30px;
+    font-weight: 800;
+    font-size: 15px;
+    color: #000000;
+    margin-top: 20%;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 30px;
 }
 .card-2-stage3-text-container {
-  margin-top: 10%;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 30px;
+    margin-top: 3%;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 30px;
 }
 .card-2-stag3-text-2 {
-  font-size: 20px;
-  font-weight: 800;
-  color: #000000;
-  padding-right: 10px;
+    font-size: 18px;
+    font-weight: 800;
+    color: #000000;
+    padding-right: 10px;
 }
 .card-2-stag3-text-2-2 {
-  font-size: 20px;
-  color: #000000;
-  
+    font-size: 18px;
+    color: #000000;
 }
 .card-2-stage3-text-3 {
-  color: #008bd9;
-  font-weight: 700;
-  font-size: 20px;
-  display: flex;
-  flex-direction: row-reverse;
-  margin-right: 30px;
+    color: #008bd9;
+    font-weight: 700;
+    font-size: 18px;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 30px;
+}
+
+/* ========================================= */
+/* HANDLING RESPONSIVE VIEW */
+/* ========================================= */
+
+/* =========mobile screen====== */
+@media screen and (max-width: 480px) {
+    .section2-body {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .card-1-style {
+        width: 100%;
+        max-width: auto;
+        border: none;
+        box-shadow: 0 0 24px 0 25% #9f9f9f;
+        filter: drop-shadow(0 0 24px rgba(159, 159, 159, .25));
+    }
+    .card-2-style {
+        width: 100%;
+    max-width: auto;
+        border: none;
+        height: 300px;
+        margin-top: 47px;
+        box-shadow: 0 0 24px 0 25% #9f9f9f;
+        filter: drop-shadow(0 0 24px rgba(159, 159, 159, .25));
+    }
+    
 }
