--- a/Frontend/src/Components/Home/style/Section4.css
+++ b/Frontend/src/Components/Home/style/Section4.css
@@ -15,7 +15,7 @@
     font-weight: 600;
 }
 
-.btn1{
+.section4-btn{
     height: 54px;
     background-color: #0480fc;
     color:#ffffff;
@@ -25,16 +25,15 @@
     box-shadow: 0 0 10px 0 #a2d0ff;
     filter: drop-shadow(0 0 10px #A2D0FF);
   }
-  .btn1:hover{
+  .section4-btn:hover{
     background-color: #0480fc!important;
     color:#ffffff;
   }
 
   /* =========mobile screen====== */
 @media screen and (max-width: 479px) {
-    .btn1{
+    .section4-btn{
         height: 54px;
-        width: 100%;
         background-color: #0480fc;
         color:#ffffff;
         font-size: 17px;
@@ -43,7 +42,7 @@
         box-shadow: 0 0 10px 0 #a2d0ff;
         filter: drop-shadow(0 0 10px #A2D0FF);
       }
-      .btn1:hover{
+      .section4-btn:hover{
         background-color: #0480fc!important;
         color:#ffffff;
       }
