--- a/Frontend/src/Components/Home/style/Section6.css
+++ b/Frontend/src/Components/Home/style/Section6.css
@@ -18,8 +18,7 @@
     margin: auto;
     padding-bottom: 20px;
 }
-.section6-card {
-}
+
 .section6-card-text {
     font-size: 15px;
     padding-top: 2%;
@@ -47,4 +46,21 @@
   align-items: center;
   margin-left: auto;
   margin-right: auto;
+}
+.section6-btn-container{
+  margin-top: 7%;
+}
+.section6-btn{
+  height: 54px;
+  background-color: #0480fc;
+  color:#ffffff;
+  font-size: 17px;
+  font-weight: bold;
+  margin-right: 5px;
+  box-shadow: 0 0 10px 0 #a2d0ff;
+  filter: drop-shadow(0 0 10px #A2D0FF);
+}
+.section4-btn:hover{
+  background-color: #0480fc!important;
+  color:#ffffff;
 }
